--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-cookie": "^7.2.0",
     "react-dom": "^18.3.1",
+    "react-ga": "^3.3.1",
     "react-router-dom": "^6.26.1",
     "socket.io-client": "^4.7.5"
   },
