--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
+    "@vercel/analytics": "^1.3.1",
     "framer-motion": "^11.3.31",
     "react": "^18.3.1",
     "react-cookie": "^7.2.0",
